log/build_2023-11-07_13-07-51/robu/stderr.log
  File "/home/robu/work/robu_holmon19_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 92
    if self.wallfollower_state == WallFollowerStates.WF_STATE_DETECTWALL
                                                                        ^
SyntaxError: expected ':'

